[gd_scene load_steps=5 format=2]

[ext_resource path="res://gui/theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/main.gd" type="Script" id=2]
[ext_resource path="res://scenes/scene0.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="scene0" parent="." instance=ExtResource( 3 )]
editor/display_folded = true

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="center" type="Control" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Label" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -67.0
margin_right = 160.0
margin_bottom = -53.0
rect_min_size = Vector2( 320, 0 )
text = "Welcome to the P1X firste demo - Efate"
align = 1

[node name="Label2" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -38.0
margin_right = 160.0
margin_bottom = -8.0
rect_min_size = Vector2( 320, 0 )
text = "\"Efate is an island in the Pacific Ocean which is part of the Shefa Province in Vanuatu. 
It is also known as ÃŽle Vate.\" - Wikipedia"
align = 1
autowrap = true

[node name="bottom" type="Control" parent="HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -60.0
margin_bottom = -60.0

[node name="buttons" type="HBoxContainer" parent="HUD/bottom"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.5
margin_top = -12.0
margin_right = 255.5
margin_bottom = 12.0
rect_min_size = Vector2( 320, 0 )
custom_constants/separation = 16
alignment = 1

[node name="scene1" type="Button" parent="HUD/bottom/buttons"]
margin_left = 16.0
margin_right = 77.0
margin_bottom = 24.0
text = "SCENE #1"

[node name="scene2" type="Button" parent="HUD/bottom/buttons"]
margin_left = 93.0
margin_right = 154.0
margin_bottom = 24.0
text = "SCENE #2"

[node name="scene3" type="Button" parent="HUD/bottom/buttons"]
margin_left = 170.0
margin_right = 231.0
margin_bottom = 24.0
text = "SCENE #3"

[node name="gap" type="Container" parent="HUD/bottom/buttons"]
margin_left = 247.0
margin_right = 311.0
margin_bottom = 24.0
rect_min_size = Vector2( 64, 0 )

[node name="scene50" type="Button" parent="HUD/bottom/buttons"]
margin_left = 327.0
margin_right = 394.0
margin_bottom = 24.0
text = "SCENE #50"

[node name="scene51" type="Button" parent="HUD/bottom/buttons"]
visible = false
margin_left = 394.0
margin_right = 461.0
margin_bottom = 24.0
text = "SCENE #51"

[node name="gap2" type="Container" parent="HUD/bottom/buttons"]
margin_left = 410.0
margin_right = 442.0
margin_bottom = 24.0
rect_min_size = Vector2( 32, 0 )

[node name="quit" type="Button" parent="HUD/bottom/buttons"]
margin_left = 458.0
margin_right = 495.0
margin_bottom = 24.0
text = "QUIT"

[node name="info" type="Label" parent="HUD/bottom"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -32.5
margin_right = 160.0
margin_bottom = -24.5
rect_min_size = Vector2( 320, 0 )
text = "Glorious 21:9 aspect ratio and 60fps."
align = 1
autowrap = true

[connection signal="pressed" from="HUD/bottom/buttons/scene1" to="." method="_on_scene1_pressed"]
[connection signal="pressed" from="HUD/bottom/buttons/scene2" to="." method="_on_scene2_pressed"]
[connection signal="pressed" from="HUD/bottom/buttons/scene3" to="." method="_on_scene3_pressed"]
[connection signal="pressed" from="HUD/bottom/buttons/scene50" to="." method="_on_scene50_pressed"]
[connection signal="pressed" from="HUD/bottom/buttons/scene51" to="." method="_on_scene51_pressed"]
[connection signal="pressed" from="HUD/bottom/buttons/quit" to="." method="_on_quit_pressed"]
